[FIX] Remove visual gap between horizontal CSS menu top item and dropdown and other improvements in tiki-top.

--- a/mods/trunk/themes/litejazz_tiki_5/styles/litejazz.css
+++ b/mods/trunk/themes/litejazz_tiki_5/styles/litejazz.css
@@ -212,6 +212,18 @@ div#sitead {margin: auto}
 #sitead.floatleft {padding-left: 100px}
 #siteloginbar {color: #fff}
 
+#siteloginbar_popup a > .sf-sub-indicator {
+	bottom: 0;
+}
+
+#siteloginbar_popup .cssmenu_horiz li ul {
+	margin-top: -12px;
+}
+
+#siteloginbar_popup .cssmenu_horiz #logout_link ul {
+	margin-left: -10em;
+}
+
 #sitetitle,
 #sitesubtitle {
 	color: #fff;
